Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjIntegerRetnumberFail.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
